--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 </head>
 <body>
     <h1>service worker javascript example</h1>
-    <a href="" onclick="registerServiceWorker()">register service worker</a>
-    <a href="">uninstall service worker</a>
-    <a href="">update service worker</a>
-    <button>get notification</button>
+    <h3>On load, this page saved itself and it's javascript files in the cache of the browser.</h3>
+    <p>Open dev tools to read console logs. Find javascript files in the 'javascript' folder.</p>
+    <h3>Tests</h3>
+    <p>
+        Delete cache and load the page with the 'offline' option ticked in the Network tab of the dev tools.
+        If successful, the pages will be loaded from the cache of the browser.
+    </p>
+    <p>Find the complete tutorial here -> <a href="https://www.youtube.com/watch?v=ksXwaWHCW6k">intro to service workers</a></p>
+    <a href="https://studiopulsar.pro">studiopulsar 2024</a>
 </body>
 </html>
 
